<resources>
    <string name="app_name">"Android Calculator "</string>
    <string name="change_Sign_Button_Text">+/-</string>
    <string name="Addition_Button_Text">+</string>
    <string name="Subtration_Button_Text">-</string>
    <string name="Multiplication_Button_Text">x</string>
    <string name="One_Button_Text">1</string>
    <string name="Two_Button_Text">2</string>
    <string name="Three_Button_Text">3</string>
    <string name="Division_Button_Text">/</string>
    <string name="Four_Button_Text">4</string>
    <string name="Five_Button_Resource">5</string>
    <string name="Six_Button_Text">6</string>
    <string name="Square_Root_Button">√</string>
    <string name="Seven_Button_Text">7</string>
    <string name="Eight_Button_Text">8</string>
    <string name="Nine_Button_Text">9</string>
    <string name="Decimal_Button_Text">.</string>
    <string name="Zero_Button_Text">0</string>
    <string name="Clear_Button_Text">clear</string>
    <string name="Equals_Button_Text">=</string>

</resources>
